added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Github Repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae repudiandae, qui, officia fugit porro voluptates accusantium saepe exercitationem fuga iure aperiam officiis maxime consectetur placeat blanditiis consequuntur autem laudantium harum?</p>
+    </div>
 </body>
 </html>
