--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h3>My First Website</h3>
+        <h3>My First Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae repudiandae, qui, officia fugit porro voluptates accusantium saepe exercitationem fuga iure aperiam officiis maxime consectetur placeat blanditiis consequuntur autem laudantium harum?</p>
+    </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae repudiandae, qui, officia fugit porro voluptates accusantium saepe exercitationem fuga iure aperiam officiis maxime consectetur placeat blanditiis consequuntur autem laudantium harum?</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae repudiandae, qui, officia fugit porro voluptates accusantium saepe exercitationem fuga iure aperiam officiis maxime consectetur placeat blanditiis consequuntur autem laudantium harum?</p>
     </div>
 </body>
