added a list to push code

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae repudiandae, qui, officia fugit porro voluptates accusantium saepe exercitationem fuga iure aperiam officiis maxime consectetur placeat blanditiis consequuntur autem laudantium harum?</p>
     </div>
+    <div>
+        <h2>How to push incremental code</h2>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
